--- a/Pipfile
+++ b/Pipfile
@@ -10,6 +10,7 @@ django = "*"
 djangorestframework = "*"
 uwsgi = "*"
 django-cors-headers = "*"
+requests = "*"
 
 [requires]
 python_version = "3.7"
